prepare Java 16 support, early releases https://jdk.java.net/16/